Here is a commit message summarizing the provided diffs:
```text
chore(config): update application properties and refine Co-op proxy configuration

- Refactor proxy initialization in `CoopConnectService` to properly route Co-op traffic through the static IP gateway, and add explicit logging for the proxy connection status.
- Update the default `official-email-domain` to `jaytech.org` and configure `mail.from` and the admin email to dynamically inherit the domain variable in `application.yml`.
- Update the default Co-op `callback-base-url` to point to `https://api.betterlinkventureslimited.co.ke` in both `application.yml` and `CoopConnectProperties`.
- Reorganize Co-op proxy property placement in `application.yml` for better configuration grouping.
```

Let me know if you'd like me to adjust the length or focus on any specific part of the changes!